added like/unlike functionality with local storage

--- a/favorites.html
+++ b/favorites.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Superhero Hunt</title>
+  <title>Superhero Hunt | Favorites</title>
   <link rel="icon" type="image/x-icon" href="/img/superhero.ico">
    <!--Font Awesome CDNs-->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,22 +18,21 @@
 <!--Navbar-->
 <nav class="navigation-bar">
   <h2 class="nav-content"><a href="index.html"><i class="fa-solid fa-mask"></i>Superhero Hunt</h2></a>
-
+  
 </nav>
 
+<!--All Superhero Listing Section-->
+<section class="superhero-favorites" >
 
 
-<!--Single page Superhero details page-->
-<section class="superhero-details-section">
-  
-  
-    
-   
-  
+
 </section>
+
+
 
 <!--Script-->
 <script src = "config.js"></script>
-<script src="app.js"></script>
+
+<script src="favorite.js" ></script>
 </body>
 </html>
