--- a/index.html
+++ b/index.html
@@ -24,21 +24,25 @@
     <form action="" class="search">
       <input type="text" id = "search" class="superhero-search" placeholder="Search superhero..">
     </form>
+    <a href="favorites.html" class="superhero-fav"><i id="favourite" class="fa-solid fa-heart"></i></a>
     
   </div>
 
 </nav>
 
 <!--All Superhero Listing Section-->
-<section class="superhero-main" hidden>
+<section class="superhero-main" >
+
 
 
 </section>
 
 
 
+
 <!--Script-->
 <script src = "config.js"></script>
+
 <script src="app.js" ></script>
 </body>
 </html>
