FE like feature

--- a/favorites.html
+++ b/favorites.html
@@ -22,6 +22,7 @@
 </nav>
 
 <!--All Superhero Listing Section-->
+<h2 class="favorites-heading">Favorites</h2>
 <section class="superhero-favorites" >
 
 
