--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
 </nav>
-
+<h2 class="favorites-heading">Marvel Superheroes</h2>
 <!--All Superhero Listing Section-->
 <section class="superhero-main" >
 
