improved mobile responsiveness

--- a/favorites.html
+++ b/favorites.html
@@ -22,7 +22,7 @@
 </nav>
 
 <!--All Superhero Listing Section-->
-<h2 class="favorites-heading">Favorites</h2>
+<h2 class="favorites-heading">Favourites</h2>
 <section class="superhero-favorites" >
 
 
