added like and local storage features

--- a/favorites.html
+++ b/favorites.html
@@ -23,17 +23,9 @@
 
 <!--All Superhero Listing Section-->
 <h2 class="favorites-heading">Favourites</h2>
-<section class="superhero-favorites" >
-
-
-
-</section>
-
-
-
+<section class="superhero-favorites" ></section>
 <!--Script-->
 <script src = "config.js"></script>
-
 <script src="favorite.js" ></script>
 </body>
 </html>
