--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Superhero Hunt | Superhero Details</title>
+  <title>Superhero Hunt | Home</title>
   <link rel="icon" type="image/x-icon" href="/img/superhero.ico">
    <!--Font Awesome CDNs-->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,10 +36,6 @@
 
 
 </section>
-
-
-
-
 <!--Script-->
 <script src = "config.js"></script>
 
